--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@ spring.application.name=LibraryManagementSystem
 server.port=8080
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/librarydb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql_library:3306/librarydb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
