--- a/application.properties
+++ b/application.properties
@@ -3,25 +3,10 @@ spring.application.name=LibraryManagementSystem
 # Server port
 server.port=8080
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://mysql:3306/librarydb?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=admin
-
-# Hibernate properties
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 # Thymeleaf configuration
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
-
-# OAuth2 Configuration
-# spring.security.oauth2.client.registration.google.client-id=18200132rcontent.com
-# spring.security.oauth2.client.registration.google.client-secret=GOn_Gb6pM9a3OzY
-# spring.security.oauth2.client.registration.google.scope=profile,email
 
 #Display Application warn and errors and info
 logging.level.org.hibernate.SQL=DEBUG
@@ -33,6 +18,45 @@ management.endpoint.health.show-details=always
 management.endpoint.info.enabled=true
 management.metrics.export.prometheus.enabled=true
 
+#### H2 Database Configuration Starts ####
+
+# Use H2 Database
+spring.datasource.url=jdbc:h2:mem:librarydb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Enable H2 Console (for debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#### H2 Database Configuration Ends ####
+
+#### MySQL Configurations Start ####
+
+# Database configuration
+# spring.datasource.url=jdbc:mysql://mysql:3306/librarydb?allowPublicKeyRetrieval=true&useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=admin
+
 # spring.datasource.url=${SPRING_DATASOURCE_URL}
 # spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 # spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# Hibernate properties for MySQL
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#### MySQL Configurations End ####
+
+#### OAuth2 Configuration Starts ####
+# spring.security.oauth2.client.registration.google.client-id=18200132rcontent.com
+# spring.security.oauth2.client.registration.google.client-secret=GOn_Gb6pM9a3OzY
+# spring.security.oauth2.client.registration.google.scope=profile,email
+
+#### OAuth2 Configuration Ends ####
